Added code for cloning multiple git repos and writing the Java files.